I22-413 Add files/folders for new config